# boost_beast_openmp

./: CMakeLists.txt  Readme.md  main.cpp
